--- a/US_0/Data/Code/combine.ipynb
+++ b/US_0/Data/Code/combine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 100,
    "id": "0456a59d",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 101,
    "id": "2cde76b4",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 102,
    "id": "cc15958b",
    "metadata": {},
    "outputs": [
@@ -39,9 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3096,)\n",
-      "(619,)\n",
-      "(2477,)\n"
+      "(3096,)\n"
      ]
     }
    ],
@@ -56,17 +54,12 @@
     "\n",
     "county_df = nan_df.drop(nan_df.nlargest(3, \"NaN count sum\").index)[\"GEOIDFQ\"]\n",
     "\n",
-    "county_valid_df = county_df.sample(frac=0.2, random_state=42)\n",
-    "county_train_df = county_df[~county_df.isin(county_valid_df)]\n",
-    "\n",
-    "print(county_df.shape)\n",
-    "print(county_valid_df.shape)\n",
-    "print(county_train_df.shape)"
+    "print(county_df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 103,
    "id": "d6547828",
    "metadata": {},
    "outputs": [
@@ -76,7 +69,7 @@
        "(43518, 76)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,50 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "c4a99b23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target = \"Median household income ($)\" # \"Owner-occupied [%]\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "e3e6653c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "window_size = 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "56086528",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "73"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "features = df_combined.columns.difference([\"GEOIDFQ\", \"year\", target])\n",
-    "\n",
-    "len(features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 104,
    "id": "c5f0e4b8",
    "metadata": {},
    "outputs": [
@@ -143,7 +93,7 @@
        "(43344, 76)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +106,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
+   "id": "56086528",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "73"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = \"Median household income ($)\" # \"Owner-occupied [%]\"\n",
+    "features = df_filtered.columns.difference([\"GEOIDFQ\", \"year\", target])\n",
+    "\n",
+    "len(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "id": "cab7963a",
    "metadata": {},
    "outputs": [
@@ -166,7 +140,7 @@
        "(43344, 76)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,88 +159,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 107,
    "id": "69ef17de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_vaild = df_norm[df_norm[\"GEOIDFQ\"].isin(county_valid_df)].sort_values([\"GEOIDFQ\", \"year\"])\n",
-    "\n",
-    "windows_valid = []\n",
-    "targets_valid = []\n",
-    "\n",
-    "for id, group in df_vaild.groupby(\"GEOIDFQ\"):\n",
-    "        features_x_df = group[features].to_numpy()\n",
-    "        features_y_df = group[target].to_numpy()[window_size-1:]\n",
-    "\n",
-    "        window = sliding_window_view(features_x_df, (window_size, features_x_df.shape[1]))[:, 0, :]\n",
-    "        windows_valid.append(window)\n",
-    "        targets_valid.append(features_y_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "b21b8d5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_train = df_norm[df_norm[\"GEOIDFQ\"].isin(county_train_df)].sort_values([\"GEOIDFQ\", \"year\"])\n",
-    "\n",
-    "windows_train = []\n",
-    "targets_train = []\n",
-    "\n",
-    "for id, group in df_train.groupby(\"GEOIDFQ\"):\n",
-    "        features_x_df = group[features].to_numpy()\n",
-    "        features_y_df = group[target].to_numpy()[window_size-1:]\n",
-    "\n",
-    "        window = sliding_window_view(features_x_df, (window_size, features_x_df.shape[1]))[:, 0, :]\n",
-    "        windows_train.append(window)\n",
-    "        targets_train.append(features_y_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "df3778bd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7428, 3, 73) (7428,)\n",
-      "(29724, 3, 73) (29724,)\n",
-      "(37152, 3, 73) (37152,)\n"
+      "3096 (12, 3, 73) 37152\n"
      ]
     }
    ],
    "source": [
-    "data_valid_x = np.vstack(windows_valid)\n",
-    "data_valid_y = np.concatenate(targets_valid)\n",
-    "data_train_x = np.vstack(windows_train)\n",
-    "data_train_y = np.concatenate(targets_train)\n",
-    "data_x = np.concatenate([data_valid_x, data_train_x], axis=0)\n",
-    "data_y = np.concatenate([data_valid_y, data_train_y], axis=0)\n",
+    "window_size = 3\n",
     "\n",
-    "print(data_valid_x.shape, data_valid_y.shape)\n",
-    "print(data_train_x.shape, data_train_y.shape)\n",
-    "print(data_x.shape, data_y.shape)"
+    "df_geoid = df_norm[df_norm[\"GEOIDFQ\"].isin(county_df)].sort_values([\"GEOIDFQ\", \"year\"])\n",
+    "\n",
+    "windows = {}\n",
+    "targets = {}\n",
+    "\n",
+    "for id, group in df_geoid.groupby(\"GEOIDFQ\"):\n",
+    "        features_x_df = group[features].to_numpy()\n",
+    "        features_y_df = group[target].to_numpy()[window_size-1:]\n",
+    "\n",
+    "        window = sliding_window_view(features_x_df, (window_size, features_x_df.shape[1]))[:, 0, :]\n",
+    "\n",
+    "        windows[id] = window\n",
+    "        targets[id] = features_y_df\n",
+    "\n",
+    "print(len(windows), next(iter(windows.values())).shape, len(windows) * next(iter(windows.values())).shape[0] )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "6d97e71b",
+   "execution_count": 108,
+   "id": "c625b3e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"../Data/data_valid_x_\" + target + \".npy\", data_valid_x)\n",
-    "np.save(\"../Data/data_valid_y_\" + target + \".npy\", data_valid_y)\n",
-    "np.save(\"../Data/data_train_x_\" + target + \".npy\", data_train_x)\n",
-    "np.save(\"../Data/data_train_y_\" + target + \".npy\", data_train_y)\n",
-    "np.save(\"../Data/data_x_\" + target + \".npy\", data_x)\n",
-    "np.save(\"../Data/data_y_\" + target + \".npy\", data_y)"
+    "np.savez(\"../Data/data_x_\" + target + \".npz\", **windows)\n",
+    "np.savez(\"../Data/data_y_\" + target + \".npz\", **targets)"
    ]
   }
  ],
