--- a/US_0/Model/Code/model.ipynb
+++ b/US_0/Model/Code/model.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "id": "85efd939",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x1d6b5a680b0>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import random\n",
+    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -28,12 +19,13 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "torch.manual_seed(42)"
+    "torch.manual_seed(42)\n",
+    "random.seed(42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "668e5c3b",
    "metadata": {},
    "outputs": [],
@@ -43,22 +35,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "344bac65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_train_x = np.load(\"../../Data/Data/data_train_x_\" + target + \".npy\")\n",
-    "data_train_y = np.load(\"../../Data/Data/data_train_y_\" + target + \".npy\")\n",
-    "data_valid_x = np.load(\"../../Data/Data/data_valid_x_\" + target + \".npy\")\n",
-    "data_valid_y = np.load(\"../../Data/Data/data_valid_y_\" + target + \".npy\")\n",
-    "data_x = np.load(\"../../Data/Data/data_x_\" + target + \".npy\")\n",
-    "data_y = np.load(\"../../Data/Data/data_y_\" + target + \".npy\")"
+    "loaded_x = np.load(\"../../Data/Data/data_x_\" + target + \".npz\", allow_pickle=True)\n",
+    "dict_x = {key: loaded_x[key] for key in loaded_x.files}\n",
+    "\n",
+    "loaded_y = np.load(\"../../Data/Data/data_y_\" + target + \".npz\", allow_pickle=True)\n",
+    "dict_y = {key: loaded_y[key] for key in loaded_y.files}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
+   "id": "51ef70c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7440, 3, 73) (7440,)\n",
+      "(29712, 3, 73) (29712,)\n",
+      "(37152, 3, 73) (37152,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_keys = list(dict_x.keys())\n",
+    "random.shuffle(all_keys)\n",
+    "\n",
+    "split_index = int(len(all_keys) * 0.8)\n",
+    "train_keys = all_keys[:split_index]\n",
+    "valid_keys = all_keys[split_index:]\n",
+    "\n",
+    "data_train_x = np.vstack([dict_x[k] for k in train_keys]) \n",
+    "data_valid_x = np.vstack([dict_x[k] for k in valid_keys])\n",
+    "data_x = np.vstack([dict_x[k] for k in all_keys])\n",
+    "\n",
+    "data_train_y = np.concatenate([dict_y[k] for k in train_keys]) \n",
+    "data_valid_y = np.concatenate([dict_y[k] for k in valid_keys]) \n",
+    "data_y = np.concatenate([dict_y[k] for k in all_keys])\n",
+    "\n",
+    "print(data_valid_x.shape, data_valid_y.shape)\n",
+    "print(data_train_x.shape, data_train_y.shape)\n",
+    "print(data_x.shape, data_y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "352ec98d",
    "metadata": {},
    "outputs": [],
@@ -73,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "id": "55ba889a",
    "metadata": {},
    "outputs": [],
@@ -88,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "fe8ce45b",
    "metadata": {},
    "outputs": [],
@@ -124,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "7cc1823e",
    "metadata": {},
    "outputs": [],
@@ -142,12 +170,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "cef776ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_epochs = 0 #250\n",
+    "max_epochs = 200\n",
     "\n",
     "for epoch in range(max_epochs):\n",
     "    model.train()\n",
@@ -188,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "id": "d3ce390a",
    "metadata": {},
    "outputs": [
@@ -196,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9160365073461721\n"
+      "0.9097924752407909\n"
      ]
     }
    ],
@@ -209,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "id": "82d3a3a2",
    "metadata": {},
    "outputs": [
@@ -217,7 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8938690868166022\n"
+      "0.921767717746671\n"
      ]
     }
    ],
@@ -230,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "id": "d49e1baa",
    "metadata": {},
    "outputs": [
@@ -238,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9115987440057346\n"
+      "0.9107295922437899\n"
      ]
     }
    ],
@@ -251,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "id": "8a41662e",
    "metadata": {},
    "outputs": [
