--- a/US_0/Data/Code/combine.ipynb
+++ b/US_0/Data/Code/combine.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "id": "0456a59d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import joblib\n",
     "from numpy.lib.stride_tricks import sliding_window_view\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import MinMaxScaler"
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "id": "2cde76b4",
    "metadata": {},
    "outputs": [],
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "id": "cc15958b",
    "metadata": {},
    "outputs": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "id": "d6547828",
    "metadata": {},
    "outputs": [
@@ -69,7 +70,7 @@
        "(43518, 76)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "id": "c5f0e4b8",
    "metadata": {},
    "outputs": [
@@ -93,7 +94,7 @@
        "(43344, 76)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "56086528",
    "metadata": {},
    "outputs": [
@@ -116,7 +117,7 @@
        "73"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +131,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
+   "id": "173f13ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['18 to 64 years poverty [%]', '18 years and over [%]',\n",
+      "       '65 years and over [%]', '65 years and over poverty [%]',\n",
+      "       'All parents in family in labor force [%]',\n",
+      "       'American Indian and Alaska Native [%]', 'Armed Forces [%]',\n",
+      "       'Asian [%]', 'Black or African American [%]',\n",
+      "       'Civilian labor force [%]', 'Commuting: individual car [%]',\n",
+      "       'Commuting: public transport [%]', 'Commuting: work from home [%]',\n",
+      "       'Education: 9th-12th (no diploma) [%]', 'Education: <9th grade [%]',\n",
+      "       'Education: associate's degree [%]', 'Education: bachelor's degree [%]',\n",
+      "       'Education: bachelor's degree or higher [%]',\n",
+      "       'Education: graduate or professional degree [%]',\n",
+      "       'Education: high school graduate [%]',\n",
+      "       'Education: high school graduate or higher [%]',\n",
+      "       'Education: some college (no degree) [%]',\n",
+      "       'Female civilian labor force [%]', 'Foreign-born [%]',\n",
+      "       'Foreign-born: naturalized [%]', 'Gross rent <25% of income [%]',\n",
+      "       'Gross rent >=25% of income [%]',\n",
+      "       'Health insurance coverage (noninstitutionalized) [%]',\n",
+      "       'Hispanic or Latino [%]', 'Homeowner vacancy rate [%]',\n",
+      "       'Households: Female (no spouse) [%]',\n",
+      "       'Households: Male (no spouse) [%]', 'Households: married-couple [%]',\n",
+      "       'Households: with broadband [%]', 'Households: with computer [%]',\n",
+      "       'Housing units with a mortgage [%]',\n",
+      "       'Labor force by industry: agriculture, forestry, fishing, hunting, mining [%]',\n",
+      "       'Labor force by industry: arts, entertainment, recreation, accommodation, food services [%]',\n",
+      "       'Labor force by industry: construction [%]',\n",
+      "       'Labor force by industry: education, health care, social assistance [%]',\n",
+      "       'Labor force by industry: finance, insurance, real estate, rental, leasing [%]',\n",
+      "       'Labor force by industry: information [%]',\n",
+      "       'Labor force by industry: manufacturing [%]',\n",
+      "       'Labor force by industry: other services [%]',\n",
+      "       'Labor force by industry: professional, scientific, management, admin, waste management services [%]',\n",
+      "       'Labor force by industry: public administration [%]',\n",
+      "       'Labor force by industry: retail trade [%]',\n",
+      "       'Labor force by industry: transportation, warehousing, utilities [%]',\n",
+      "       'Labor force by industry: wholesale trade [%]', 'Land area (km²)',\n",
+      "       'Limited English speakers [%]', 'Male [%]',\n",
+      "       'Mean travel time to work (min)', 'Median age',\n",
+      "       'Median full-time earnings gender ratio (F/M) [%]',\n",
+      "       'Moved: different county [%]', 'Moved: different house [%]',\n",
+      "       'Moved: different state [%]', 'Moved: within U.S. [%]',\n",
+      "       'Owner costs <25% of income (with mortgage) [%]',\n",
+      "       'Owner costs <25% of income (without mortgage) [%]',\n",
+      "       'Owner costs >=25% of income (with mortgage) [%]',\n",
+      "       'Owner costs >=25% of income (without mortgage) [%]',\n",
+      "       'Owner-occupied [%]', 'Rental vacancy rate [%]', 'Total households',\n",
+      "       'Total housing units', 'Total population', 'Under 18 years poverty [%]',\n",
+      "       'Unemployment Rate [%]', 'Vacant housing units [%]', 'Water area (km²)',\n",
+      "       'White [%]'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "cab7963a",
    "metadata": {},
    "outputs": [
@@ -140,7 +208,7 @@
        "(43344, 76)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +227,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 21,
+   "id": "791dc301",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../Data/scaler_y_Median household income ($).pkl']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(scaler_y, \"../Data/scaler_y_\" + target + \".pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "69ef17de",
    "metadata": {},
    "outputs": [
@@ -188,12 +277,12 @@
     "        windows[id] = window\n",
     "        targets[id] = features_y_df\n",
     "\n",
-    "print(len(windows), next(iter(windows.values())).shape, len(windows) * next(iter(windows.values())).shape[0] )"
+    "print(len(windows), windows[\"0500000US28107\"].shape, len(windows) * windows[\"0500000US28107\"].shape[0] )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 23,
    "id": "c625b3e9",
    "metadata": {},
    "outputs": [],
