--- a/US_0/Data/Code/combine.ipynb
+++ b/US_0/Data/Code/combine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "0456a59d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "2cde76b4",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "cc15958b",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "d6547828",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
        "(43518, 76)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "c5f0e4b8",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "(43344, 76)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "56086528",
    "metadata": {},
    "outputs": [
@@ -117,13 +117,13 @@
        "73"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target = \"Median household income ($)\" # \"Owner-occupied [%]\"\n",
+    "target = \"Median household income ($)\"\n",
     "features = df_filtered.columns.difference([\"GEOIDFQ\", \"year\", target])\n",
     "\n",
     "len(features)"
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "173f13ae",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "cab7963a",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "(43344, 76)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,28 +227,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "791dc301",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../Data/scaler_y_Median household income ($).pkl']"
+       "['../Data/scaler_y.pkl']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(scaler_y, \"../Data/scaler_y_\" + target + \".pkl\")"
+    "joblib.dump(scaler_y, \"../Data/scaler_y.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "69ef17de",
    "metadata": {},
    "outputs": [
@@ -282,13 +282,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "c625b3e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez(\"../Data/data_x_\" + target + \".npz\", **windows)\n",
-    "np.savez(\"../Data/data_y_\" + target + \".npz\", **targets)"
+    "np.savez(\"../Data/data_x.npz\", **windows)\n",
+    "np.savez(\"../Data/data_y.npz\", **targets)"
    ]
   }
  ],
