--- a/US_0/Model/Code/model.ipynb
+++ b/US_0/Model/Code/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 187,
    "id": "85efd939",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 188,
    "id": "344bac65",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 189,
    "id": "51ef70c1",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 190,
    "id": "352ec98d",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 191,
    "id": "55ba889a",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 192,
    "id": "fe8ce45b",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
     "        \n",
     "\n",
     "    def forward(self, input):\n",
-    "        x = F.dropout(input, p=0.35)\n",
+    "        x = F.dropout(input, p=0.35, training=self.training)\n",
     "\n",
     "        x, _ = self.lstm(x)\n",
     "        x = x[:, -1, :]\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 193,
    "id": "7cc1823e",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 194,
    "id": "cef776ef",
    "metadata": {},
    "outputs": [],
@@ -196,17 +196,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 195,
    "id": "7fcd48fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RNN_Regressor(\n",
+       "  (lstm): LSTM(73, 32, batch_first=True)\n",
+       "  (dense1): Linear(in_features=32, out_features=4, bias=True)\n",
+       "  (dense2): Linear(in_features=4, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model = torch.jit.load(\"../Model/model.pt\")"
+    "incompat  = model.load_state_dict(torch.load(\"../Model/model.pt\"))\n",
+    "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "id": "d3ce390a",
    "metadata": {},
    "outputs": [
@@ -214,12 +230,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.01865348788921149\n"
+      "0.9403046976925796\n"
      ]
     }
    ],
    "source": [
-    "model.eval()\n",
     "with torch.no_grad(): \n",
     "    output = model(data_train_x)\n",
     "print(r2_score(data_train_y, output))\n",
@@ -229,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "id": "82d3a3a2",
    "metadata": {},
    "outputs": [
@@ -237,12 +252,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.02053599413584477\n"
+      "0.9241244065281954\n"
      ]
     }
    ],
    "source": [
-    "model.eval()\n",
     "with torch.no_grad(): \n",
     "    output = model(data_valid_x)\n",
     "print(r2_score(data_valid_y, output))\n",
@@ -252,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "id": "d49e1baa",
    "metadata": {},
    "outputs": [
@@ -260,12 +274,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.019081024733403316\n"
+      "0.9368157062758985\n"
      ]
     }
    ],
    "source": [
-    "model.eval()\n",
     "with torch.no_grad(): \n",
     "    output = model(data_x)\n",
     "print(r2_score(data_y, output)) #r2_score, mean_absolute_error\n",
@@ -275,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 199,
    "id": "8a41662e",
    "metadata": {},
    "outputs": [
@@ -308,12 +321,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 200,
    "id": "a7a29c5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#torch.jit.script(model).save(\"../Model/model.pt\")"
+    "#torch.save(model.state_dict(), \"../Model/model.pt\")"
    ]
   }
  ],
