Cleaned NN3_ICPSR_IHDS-1.ipynb

--- a/India/NN3_ICPSR_IHDS-1.ipynb
+++ b/India/NN3_ICPSR_IHDS-1.ipynb
@@ -256,7 +256,7 @@
     "            for n_unique in more_column_cardinalities.values()\n",
     "        )\n",
     "        \n",
-    "        # Fully connected head after LSTM\n",
+    "        # Fully connected\n",
     "        self.fc = nn.Sequential(\n",
     "            nn.Linear(total_embed_dim, 256),\n",
     "            nn.BatchNorm1d(256),\n",
